--- a/config/app.yaml.example
+++ b/config/app.yaml.example
@@ -1,11 +1,11 @@
 app:
-  logFile: log/gin.log
+  logFile: logs/gin.log
+  processLogFile: logs/process.log
   httpPort: 8080
   webSocketPort: 8089
   rpcPort: 9001
-  httpUrl: 127.0.0.1:8080
-  webSocketUrl:  127.0.0.1:8089
-
+  httpUrl: 10.42.1.70:8080
+  webSocketUrl: 10.42.1.70:8089
 
 redis:
   addr: "localhost:6379"
@@ -13,3 +13,7 @@ redis:
   DB: 0
   poolSize: 30
   minIdleConns: 30
+mysql:
+  max_idle_conn: 5
+  max_open_conn: 50
+  dsn: "name:password@tcp(127.0.0.1:3306)/database?charset=utf8mb4&parseTime=True&loc=Local"
